[gd_scene load_steps=6 format=3 uid="uid://chrh4o8s2ikuv"]

[ext_resource type="Script" uid="uid://dmyaeyfdo71v1" path="res://assets/ui/overworld/ProgressBarManagement.gd" id="1_enhr1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kgxx3"]
bg_color = Color(0.0980392, 0.0980392, 0.0980392, 1)
corner_radius_bottom_right = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f1u3i"]
bg_color = Color(0, 0.784314, 0, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_enhr1"]
bg_color = Color(0, 0.784314, 0.784314, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0p0dd"]
bg_color = Color(1, 0.588235, 0, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="PlayerInfo" type="Control"]
layout_mode = 3
anchors_preset = 0

[node name="PlayerInfoPanel" type="Panel" parent="."]
layout_mode = 0
offset_right = 524.0
offset_bottom = 60.0
theme_override_styles/panel = SubResource("StyleBoxFlat_kgxx3")

[node name="DataLabels" type="Control" parent="PlayerInfoPanel"]
anchors_preset = 0
offset_left = 6.0
offset_top = 2.0
offset_right = 46.0
offset_bottom = 42.0

[node name="NameLabel" type="Label" parent="PlayerInfoPanel/DataLabels"]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 194.0
offset_bottom = 32.0
text = "PSILO-CUBES"
vertical_alignment = 1

[node name="LVLLabel" type="Label" parent="PlayerInfoPanel/DataLabels"]
layout_mode = 0
offset_left = 1.0
offset_top = 28.0
offset_right = 194.0
offset_bottom = 59.0
text = "LVL 80"
vertical_alignment = 1

[node name="ProgressBarContainer" type="VBoxContainer" parent="PlayerInfoPanel"]
layout_mode = 0
offset_left = 124.0
offset_top = 3.0
offset_right = 523.0
offset_bottom = 59.0
theme_override_constants/separation = 2
script = ExtResource("1_enhr1")

[node name="HPContainer" type="HBoxContainer" parent="PlayerInfoPanel/ProgressBarContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="PlayerInfoPanel/ProgressBarContainer/HPContainer"]
layout_mode = 2

[node name="HPProgressBar" type="ProgressBar" parent="PlayerInfoPanel/ProgressBarContainer/HPContainer/CenterContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(375, 15)
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_f1u3i")
value = 100.0
show_percentage = false

[node name="HPLabel" type="Label" parent="PlayerInfoPanel/ProgressBarContainer/HPContainer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "0/0"

[node name="Label" type="Label" parent="PlayerInfoPanel/ProgressBarContainer/HPContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "HP"
horizontal_alignment = 1

[node name="MPContainer" type="HBoxContainer" parent="PlayerInfoPanel/ProgressBarContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="PlayerInfoPanel/ProgressBarContainer/MPContainer"]
layout_mode = 2

[node name="MPProgressBar" type="ProgressBar" parent="PlayerInfoPanel/ProgressBarContainer/MPContainer/CenterContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(375, 15)
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_enhr1")
value = 100.0
show_percentage = false

[node name="MPLabel" type="Label" parent="PlayerInfoPanel/ProgressBarContainer/MPContainer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "0/0"

[node name="Label" type="Label" parent="PlayerInfoPanel/ProgressBarContainer/MPContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "MP"
horizontal_alignment = 1

[node name="XPContainer" type="HBoxContainer" parent="PlayerInfoPanel/ProgressBarContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="PlayerInfoPanel/ProgressBarContainer/XPContainer"]
layout_mode = 2

[node name="XPProgressBar" type="ProgressBar" parent="PlayerInfoPanel/ProgressBarContainer/XPContainer/CenterContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(375, 15)
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_0p0dd")
value = 100.0
show_percentage = false

[node name="XPLabel" type="Label" parent="PlayerInfoPanel/ProgressBarContainer/XPContainer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "0/0"

[node name="Label" type="Label" parent="PlayerInfoPanel/ProgressBarContainer/XPContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "XP"
horizontal_alignment = 1
